--- a/boot/api-server/build.gradle
+++ b/boot/api-server/build.gradle
@@ -13,3 +13,16 @@ jar {
 repositories {
 	mavenCentral()
 }
+
+sourceSets {
+	acceptanceTest {
+		compileClasspath += sourceSets.main.output + sourceSets.test.output
+		runtimeClasspath += sourceSets.main.output + sourceSets.test.output
+	}
+}
+
+task acceptanceTest(type: Test) {
+	testClassesDirs = sourceSets.acceptanceTest.output.classesDirs
+	classpath = sourceSets.acceptanceTest.runtimeClasspath
+	useJUnitPlatform()
+}
