--- a/boot/api-server/build.gradle
+++ b/boot/api-server/build.gradle
@@ -11,12 +11,22 @@ sourceSets {
 		compileClasspath += sourceSets.main.output + sourceSets.test.output
 		runtimeClasspath += sourceSets.main.output + sourceSets.test.output
 	}
+
+	documentation {
+		compileClasspath += sourceSets.main.output + sourceSets.test.output
+		runtimeClasspath += sourceSets.main.output + sourceSets.test.output
+	}
 }
 
 configurations {
+	// acceptanceTest
 	acceptanceTestImplementation.extendsFrom(implementation, testImplementation)
 	acceptanceTestRuntimeOnly.extendsFrom(runtimeOnly, testRuntimeOnly)
 	acceptanceTestImplementation.canBeResolved(true)
+
+	// documentation
+	documentationImplementation.extendsFrom(implementation, testImplementation)
+	documentationRuntimeOnly.extendsFrom(runtimeOnly, testRuntimeOnly)
 }
 
 dependencies {
@@ -24,6 +34,12 @@ dependencies {
 
 	// rest-assured
 	acceptanceTestImplementation 'io.rest-assured:rest-assured'
+	documentationImplementation 'io.rest-assured:rest-assured:3.3.0'
+	documentationImplementation 'io.rest-assured:spring-mock-mvc:3.3.0'
+
+	// rest-docs
+	documentationImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+	documentationImplementation 'org.springframework.restdocs:spring-restdocs-restassured'
 
 	// cucumber
 	acceptanceTestImplementation 'io.cucumber:cucumber-java'
